Incorrect GLSL shading for Cycles Fresnel- and Layer Weight nodes #47349

Closed
opened 2016-02-07 01:35:02 +01:00 by Ralf Hölzemer · 6 comments

System Information
Debian Stretch, 64bit, NVIDIA Geforce GTX 960
system-info.txt

Blender Version
Broken: I think it broke in 9b3efa912a

Short description of error
Cycles Fresnel- and Layer Weight nodes display incorrect when viewed with the Material Viewport shading mode

Exact steps for others to reproduce the error

  • open fresnel_bug.blend
  • set the left 3dview to Rendered Viewport shading
  • compare the rendered result with the left 3dview
  • slide the Mix node's factor to switch between Fresnel and Layer Weight node
  • connect the Facing output of the Layer Weight node to the Color2 input of the Mix node

Patch against latest master
fresnel_bug.diff

**System Information** Debian Stretch, 64bit, NVIDIA Geforce GTX 960 [system-info.txt](https://archive.blender.org/developer/F280511/system-info.txt) **Blender Version** Broken: I think it broke in 9b3efa912a **Short description of error** Cycles Fresnel- and Layer Weight nodes display incorrect when viewed with the Material Viewport shading mode **Exact steps for others to reproduce the error** - open [fresnel_bug.blend](https://archive.blender.org/developer/F280509/fresnel_bug.blend) - set the left 3dview to Rendered Viewport shading - compare the rendered result with the left 3dview - slide the Mix node's factor to switch between Fresnel and Layer Weight node - connect the Facing output of the Layer Weight node to the Color2 input of the Mix node **Patch against latest master** [fresnel_bug.diff](https://archive.blender.org/developer/F280512/fresnel_bug.diff)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @cheleb

Added subscriber: @cheleb

This issue was referenced by 72dd1ba3fe

This issue was referenced by 72dd1ba3fe67206680ef3540b681d944e8bb4872

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for the patch!

Thanks for the patch!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47349
No description provided.