Fix T47349: incorrect Cycles fresnel and layer weight with GLSL materials.

Patch by Ralf Hölzemer.